[gd_scene load_steps=2 format=3 uid="uid://updui_001"]

[ext_resource type="Script" path="res://game/scripts/ui/UpdatePromptUI.gd" id="1_script"]

[node name="UpdatePromptUI" type="CanvasLayer"]
layer = 120
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -70.0
offset_right = 120.0
offset_bottom = 70.0

[node name="TitleLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 26.0
text = "Update Available!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 34.0
offset_right = 230.0
offset_bottom = 74.0
text = "A new version is available.
Would you like to update?"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 80.0
offset_right = 230.0
offset_bottom = 96.0
text = "v1.0.0 â†’ v1.1.0"
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="UpdateButton" type="Button" parent="Panel"]
offset_left = 130.0
offset_top = 106.0
offset_right = 220.0
offset_bottom = 130.0
text = "Update"

[node name="DismissButton" type="Button" parent="Panel"]
offset_left = 20.0
offset_top = 106.0
offset_right = 110.0
offset_bottom = 130.0
text = "Later"
